# bazel_go_test

./: .gitignore  BUILD.bazel  BUILD.bazel~  Gopkg.toml  README.md  WORKSPACE  bazel-bazel_go_test  bazel-bin  bazel-genfiles  bazel-out  bazel-testlogs  main.go  main_test.go  main_test.go~
lib/: BUILD.bazel  src.go  user.proto
