load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test", "go_prefix")
load("@bazel_gazelle//:def.bzl", "gazelle")

gazelle(
    name = "gazelle",
    external = "vendored",  # "external"
    prefix = "bazel_go_test",
)

go_prefix("bazel_go_test")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "bazel_go_test",
    visibility = ["//visibility:private"],
    deps = [
        "//lib:go_default_library",
        "@com_github_burntsushi_toml//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)

go_binary(
    name = "bazel_go_test",
    data = ["//:Gopkg.lock"],
    embed = [":go_default_library"],
    importpath = "bazel_go_test",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_sirupsen_logrus//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)

go_test(
    name = "go_default_xtest",
    srcs = ["main_test.go"],
    data = ["//:Gopkg.lock"],
    importpath = "bazel_go_test_test",
    deps = [":go_default_library"],
)
