load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test", "go_prefix", "go_path")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@bazel_gazelle//:def.bzl", "gazelle")

gazelle(
    name = "gazelle",
    prefix = "github.com/iamneal/bazel_go_test",
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/iamneal/bazel_go_test",
    visibility = ["//visibility:private"],
    deps = [
        "//lib:go_default_library",
        "@org_golang_x_net//context:go_default_library",
        "@com_github_burntsushi_toml//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "bazel_go_test",
    embed = [":go_default_library"],
    data = ["//:Gopkg.lock"],
    importpath = "github.com/iamneal/bazel_go_test",
    visibility = ["//visibility:public"],
    # pure = "on",
    # goos = "linux",
)

go_image(
    name = "bazel_image",
    binary = ":bazel_go_test",
    # pure = "on",
    # goos = "linux",
)

go_test(
    name = "go_default_xtest",
    srcs = ["main_test.go"],
    data = ["//:Gopkg.lock"],
    deps = [":go_default_library"],
)
