load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test", "go_prefix", "go_path")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

#load("@io_bazel_rules_docker//docker:docker.bzl", "docker_image")
load("@bazel_gazelle//:def.bzl", "gazelle")

gazelle(
    name = "gazelle",
    external = "vendored",  # "external"
    prefix = "bazel_go_test",
)

go_prefix("bazel_go_test")

go_path(
    name = "path",
    deps = [
        ":go_default_library",
        ":go_default_xtest",
    ],
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "bazel_go_test",
    visibility = ["//visibility:private"],
    deps = [
        "//lib:go_default_library",
        "@com_github_burntsushi_toml//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)

go_binary(
    name = "bazel_go_test",
    data = ["//:Gopkg.lock"],
    embed = [":go_default_library"],
    importpath = "bazel_go_test",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_sirupsen_logrus//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)

# can run with: bazel run //:bazel_go_image
# if you just want to load into local repository: bazel run //:bazel_go_image -- --norun
go_image(
    name = "bazel_go_image",
    srcs = ["main.go"],
    data = ["//:Gopkg.lock"],
    importpath = "bazel_go_test",
    visibility = ["//visibility:public"],
    deps = [
        "//lib:go_default_library",
        "@com_github_burntsushi_toml//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)

go_test(
    name = "go_default_xtest",
    srcs = ["main_test.go"],
    data = ["//:Gopkg.lock"],
    importpath = "bazel_go_test_test",
    deps = [":go_default_library"],
)
