load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@org_pubref_rules_protobuf//protobuf:rules.bzl", "proto_language", "proto_compile")

##############################
# Proto language rules
############################## 

proto_language(
    name = "persist_single",
    pb_outputs = [
        "{basename}.persist.go",
    ],
    pb_options = ["persist_root=github.com/iamneal/bazel_go_test/lib"],
    pb_plugin = "@protoc_gen_persist//:protoc-gen-persist",
    supports_pb = True,
)

proto_language(
    name = "persist_lib",
    pb_outputs = [
        "persist_lib/pkg_level_definitions.persist.go",
        "persist_lib/{basename}_queries.persist.go",
        "persist_lib/{basename}_query_handlers.persist.go",
    ],
    pb_options = ["persist_root=bazel_go_test/lib"],
    pb_plugin = "@protoc_gen_persist//:protoc-gen-persist",
    supports_pb = True,
)

##############################
# Proto compile rules
##############################
proto_compile(
    name = "persist_lib_protos",
    protos = ["user.proto"],
    langs = [
        ":persist_lib",
    ],
    verbose = 1,
    deps = ["@protoc_gen_persist//persist:persist_pb_protos"],
    inputs = [
        "@com_google_protobuf//:well_known_protos",
    ],
    importmap = {
        "options.proto": "github.com/tcncloud/protoc-gen-persist/persist",
    },
    imports = [
        "external/com_google_protobuf/src",
        "external/protoc_gen_persist/persist/"
    ],
    with_grpc = True,
)

proto_compile(
    name = "persist_and_go_protos",
    protos = ["user.proto"],
    langs = [
        ":persist_single",
        "@org_pubref_rules_protobuf//go",
    ],
    verbose = 1,
    deps = [
        "@protoc_gen_persist//persist:persist_pb_protos",
    ],
    inputs = [
        "@com_google_protobuf//:well_known_protos",
    ],
    importmap = {
        "options.proto": "github.com/tcncloud/protoc-gen-persist/persist",
    },
    imports = [
        "external/com_google_protobuf/src",
        "external/protoc_gen_persist/persist/"
    ],
    with_grpc = True,
)

##############################
# Go library rules
##############################
go_library(
    name = "persist_library",
    srcs = [
        ":persist_lib_protos",
    ],
    importpath = "github.com/iamneal/bazel_go_test/lib/persist_lib",
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_cloud_go//spanner:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)

go_library(
    name = "go_default_library",
    srcs = [
        "src.go",
        ":persist_and_go_protos",
    ],
    importpath = "github.com/iamneal/bazel_go_test/lib",
    visibility = ["//visibility:public"],
    deps = [
        ":persist_library",
        "@com_google_cloud_go//spanner:go_default_library",
        "@org_golang_x_net//context:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
        "@protoc_gen_persist//persist:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
